# helo-win

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/: CLAUDE.md  settings.json
.github/workflows/: release.yml
docs/: README.md  SUMMARY.md  concepts.md  configuration.md  cross-platform.md  gui.md  headless.md  hooks.md  installation.md  interactive-mode.md  providers.md  quick-start.md  runtimes.md
docs/commands/: README.md  add.md  clean.md  completion.md  defaults.md  edit.md  init.md  key.md  keys.md  list.md  remove.md  run.md  runtime.md  sessions.md  status.md  templates.md  update.md
gui/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.main.json  vite.config.ts
gui/documentation/: V1_RELEASE.md  project_plan.md
gui/e2e/: clear-freeze.spec.ts  helpers.ts  paste.spec.ts  scroll.spec.ts  sidebar-colors.spec.ts  sidebar.spec.ts  split-pane.spec.ts  terminal-clear.spec.ts  terminal-padding.spec.ts  url-handling.spec.ts
gui/src/main/: helo-bridge.ts  index.ts  preload.ts  pty-client.ts  pty-daemon.ts  pty-manager.ts  shell-detect.ts
gui/src/renderer/: App.tsx  index.html  styles.css  theme.ts  types.d.ts
gui/src/renderer/components/: BlueprintPanel.tsx  BrowserView.tsx  ContextMenu.tsx  SettingsPanel.tsx  ShortcutsTooltip.tsx  Sidebar.tsx  TabletToolbar.tsx  TitleBar.tsx  (+1 more)
gui/src/shared/: settings.ts  types.ts
gui/src/test/: setup.ts
src/: config.rs  hooks_post_compact.py  main.rs  models.rs  project.rs  providers.rs
templates/: assistant.md  coding.md  devops.md
tests/: cli.rs
