[package]
name = "helo"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "helo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
