[package]
name = "helo"
version = "0.1.8"
edition = "2021"

[[bin]]
name = "helo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
